Fixed package name for Packagist

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "eidetic",
+  "name": "rawkode/eidetic",
   "description": "EventSourcing library for php",
   "autoload": {
     "psr-4": {
