--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
     "php": ">=5.4"
   },
   "require-dev": {
-    "phpspec/phpspec": "~2.1"
+    "phpspec/phpspec": "~2.1",
+    "phpunit/phpunit": "~4.3",
+    "squizlabs/php_codesniffer": "~2.3"
   }
 }
