--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,7 @@ matrix:
 before_script:
     - travis_retry composer self-update
     - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction
-    - travis_retry wget https://scrutinizer-ci.com/ocular.phar
-    - mkdir -p var/log/build
 
 script:
-    - bin/phpunit --coverage-clover=var/log/build/clover.xml
-    - bin/phpcs --standard=PSR2 src tests
-
-after_script:
-    - php ocular.phar code-coverage:upload --format=php-clover var/log/build/clover.xml
+    - bin/phpcs --standard=PSR2 src test
 
