--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ before_script:
     - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction
 
 script:
-    - bin/phpcs --standard=PSR2 src
+    - bin/phpcs --standard=PSR2 --warning-severity=0 src
 
