--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,14 @@
 {
   "name": "rawkode/eidetic",
-  "description": "EventSourcing library for php",
+  "description": "CQRS and EventSourcing package for php >= 5.4",
   "license": "MIT",
+  "type": "library",
+  "authors": [
+      {
+          "name": "David McKay",
+          "email": "david@rawkode.com"
+      }
+  ],
   "keywords": [
     "CQRS",
     "EventSourcing"
@@ -10,11 +17,6 @@
     "psr-4": {
       "Rawkode\\Eidetic\\": "src//"
     }
-  },
-  "autoload-dev": {
-     "psr-4": {
-         "Rawkode\\Eidetic\\Stub\\": "test//stub//"
-     }
   },
   "config": {
     "bin-dir": "bin",
