--- a/.gitattributes
+++ b/.gitattributes
@@ -2,10 +2,10 @@
 /.editorconfig      export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
-/.phpspec.yml       export-ignore
 /.scrutinizer.yml   export-ignore
 /.travis.yml        export-ignore
 /bin                export-ignore
 /examples           export-ignore
+/phpspec.yml        export-ignore
 /test               export-ignore
 /var                export-ignore
