--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
     "vendor-dir": "var/vendor"
   },
   "require": {
-    "php": ">=5.4"
+    "php": ">=5.4",
+    "henrikbjorn/phpspec-code-coverage": "^2.0"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.1",
-    "phpunit/phpunit": "~4.3",
     "squizlabs/php_codesniffer": "~2.3"
   }
 }
