--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,3 +1,12 @@
+extensions:
+    - PhpSpec\Extension\CodeCoverageExtension
+
+code_coverage:
+  format:
+    - clover
+  output:
+    clover: coverage.xml
+
 suites:
     core:
         spec_prefix: phpspec
