--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,6 +1,8 @@
-preset: recommended
+preset: psr2
+linting: true
 finder:
-  exclude:
-    - "test"
-  name:
-    - "*.php"
+    path:
+        - "src"
+    name:
+        - "*.php"
+
