--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,6 @@
   },
   "require-dev": {
     "phpspec/phpspec": "~2.1",
-    "phpunit/phpunit": "~4.3",
-    "fabpot/php-cs-fixer": "~1.0"
+    "phpunit/phpunit": "~4.3"
   }
 }
