--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,11 @@
   },
   "require": {
     "php": ">=5.4",
-    "fabpot/php-cs-fixer": "^1.10"
+    "doctrine/dbal": "2.5.2"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.1",
-    "phpunit/phpunit": "~4.3"
+    "phpunit/phpunit": "~4.3",
+    "fabpot/php-cs-fixer": "^1.10"
   }
 }
