--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,11 @@
   },
   "require": {
     "php": ">=5.4",
-    "doctrine/dbal": "2.5.2"
+    "doctrine/dbal": "^2.5"
   },
   "require-dev": {
-    "phpspec/phpspec": "~2.1",
-    "phpunit/phpunit": "~4.3",
+    "phpspec/phpspec": "^2.1",
+    "phpunit/phpunit": "^5.0",
     "fabpot/php-cs-fixer": "^1.10"
   }
 }
