--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
   },
   "require": {
     "php": ">=5.4",
-    "doctrine/dbal": "2.5.2"
+    "doctrine/dbal": "2.5.2",
+    "symfony/event-dispatcher": "^2.7"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.1",
