--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 language: php
 
 php:
-    - 5.4
     - 5.5
     - 5.6
     - hhvm
 
 matrix:
     include:
-        - php: 5.4
+        - php: 5.5
           env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
 
 before_script:
@@ -18,6 +17,7 @@ before_script:
 
 script:
     - bin/phpunit
+    - bin/phpspec run --format=pretty
 
 after_script:
   - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]] && [[ "$TRAVIS_PHP_VERSION" != "7.0" ]]; then php ocular.phar code-coverage:upload --format=php-clover var/build/logs/clover.xml; fi
