--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "keywords": [
     "CQRS",
-    "EventSourcing"
+    "EventSourcing",
+    "EventStore"
   ],
   "autoload": {
     "psr-4": {
@@ -31,13 +32,13 @@
     "vendor-dir": "var/vendor"
   },
   "require": {
-    "php": ">=5.4",
-    "doctrine/dbal": "2.5.2",
+    "php": ">=5.5",
+    "doctrine/dbal": "^2.5",
     "symfony/event-dispatcher": "^2.7"
   },
   "require-dev": {
-    "phpspec/phpspec": "~2.1",
-    "phpunit/phpunit": "~4.3",
+    "phpspec/phpspec": "^2.1",
+    "phpunit/phpunit": "^4.3",
     "fabpot/php-cs-fixer": "^1.10"
   }
 }
