Major storage changes to the way EventStore works. Opted for coupling to EventSourcing namespace, rather than being everything to everyone

--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,7 @@
   },
   "autoload-dev": {
       "psr-4": {
-          "Rawkode\\Eidetic\\Tests\\Unit\\": "test//phpunit//unit//"
-      },
-      "psr-4": {
-          "Rawkode\\Eidetic\\Tests\\Integration\\": "test//phpunit//integration//"
+          "Example\\": "usr//share//doc//example//"
       }
   },
   "config": {
